--- a/README.org
+++ b/README.org
@@ -14,6 +14,7 @@
 + 终端：alacritty, kitty(可选)
 + 护眼：redshift-gtk
 + 程序启动器：rofi
++ 壁纸设置器：nitrogen, feh
 + 特效合成器：picom-ibhagwan-git
 + 文件管理器：thunar
 + 电源管理器：xfce4-power-manager
