clean redundent config, perfect more readme

--- a/README.org
+++ b/README.org
@@ -9,6 +9,12 @@
 #+DOWNLOADED: screenshot @ 2020-11-10 16:00:15
 [[file:Shot/2020-11-10_16-00-15_screenshot.png]]
 
+* 怎么用我的配置
+1. 先把这个仓库克隆到本地
+2. 如果你之前有自己的配置记得先备份
+   #+BEGIN_SRC bash
+   cp -vr alacritty dunst i3 kitty rofi zathura ~/.config
+   #+END_SRC
 
 * 依赖
 + 终端：alacritty, kitty(可选)
