--- a/README.org
+++ b/README.org
@@ -51,6 +51,15 @@
 - 控制屏幕亮度相关
 - 固定特定 WM_CLASS 的窗口出现的工作区
 - 特定 WM_CLASS 的窗口出现时悬浮
+  
+  如果想要自己添加新的窗口，执行：
+  #+BEGIN_SRC bash
+xprop | grep WM_CLASS
+  #+END_SRC
+  之后鼠标点击你想要看的窗口就可以看到这个窗口的 WM_CLASS
+- mod+return 打开 alacritty，mod+shift+return 打开 kitty 
+- 使用脚本切换亮暗主题
+- mod1(Alt)+p 重启 polybar
 - 定义启动不同应用的快捷键
 - 定义截图的不同方式
 - 启动不同的 IDE 的模式
