change picom version

--- a/README.org
+++ b/README.org
@@ -1,6 +1,7 @@
 #+TITLE: Readme
 #+AUTHOR: Mir
 #+DATE: <2020-11-10 二>
+#+OPTIONS: ^:nil
 
 * 效果
 #+DOWNLOADED: screenshot @ 2020-11-10 15:52:41
@@ -20,7 +21,7 @@ cp -vr alacritty kitty i3 picom dunst rofi zathura ~/.config
 + 护眼：redshift-gtk
 + 程序启动器：rofi
 + 壁纸设置器：nitrogen, feh
-+ 特效合成器：picom-ibhagwan-git
++ 特效合成器：picom-jonaburg-git
 + 文件管理器：thunar
 + 电源管理器：xfce4-power-manager
 + 截图工具：flameshot, scrot
